<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_blue"
    android:orientation="vertical">
    
    <TextView 
        android:id="@+id/a001_tv_top"
        style="@style/textview_larger"
        android:gravity="center"
        android:text="@string/newuser"
        android:layout_marginTop="5dp"
        />
    
    <ScrollView 
        style="@style/layout_base"
        android:layout_margin="20dp"
        android:layout_above="@+id/a001_layout_bottom"
        android:layout_below="@+id/a001_tv_top"
        >
        <LinearLayout 
            style="@style/width_fill"
            android:orientation="vertical"
            >
            <TextView 
                style="@style/textview_normal"
                android:text="@string/firstname"
                />
            <EditText 
                android:id="@+id/a001_et_firstname"
                style="@style/edittext_base"
                android:hint="@string/firstname"
                />
            <TextView 
                style="@style/textview_normal"
                android:text="@string/lastname"
                />
            <EditText 
                android:id="@+id/a001_et_lastname"
                style="@style/edittext_base"
                android:hint="@string/lastname"
                />
            <TextView 
                style="@style/textview_normal"
                android:text="@string/email"
                />
            <EditText 
                android:id="@+id/a001_et_email"
                style="@style/edittext_base"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />
            <TextView 
                style="@style/textview_normal"
                android:text="@string/confirmemail"
                />
            <EditText 
                android:id="@+id/a001_et_confirmemail"
                style="@style/edittext_base"
                android:hint="@string/confirmemail"
                android:inputType="textEmailAddress"
                />
            <TextView 
                style="@style/textview_normal"
                android:text="@string/gender"
                />
            <!-- <EditText 
                android:id="@+id/a001_et_gender"
                style="@style/width_fill"
                android:hint="@string/gender"
                /> -->
            <RadioGroup 
                style="@style/width_fill"
                android:orientation="horizontal"
                >
                <RadioButton 
                    android:id="@+id/a001_rb_male"
                    style="@style/width_fill"
                    android:layout_weight="1"
                    android:text="@string/male"
                    />
                <RadioButton 
                    android:id="@+id/a001_rb_female"
                    style="@style/width_fill"
                    android:layout_weight="1"
                    android:text="@string/female"
                    />
            </RadioGroup>
            <TextView 
                style="@style/textview_normal"
                android:text="@string/birthday"
                />
            <EditText 
                android:id="@+id/a001_et_birthday"
                style="@style/edittext_base"
                android:hint="@string/birthday"
                android:inputType="date"
                />
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout 
        android:id="@+id/a001_layout_bottom"
        style="@style/width_fill"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <Button 
            android:id="@+id/a001_btn_registry"
            style="@style/button_base"
            android:text="@string/registry"
            android:layout_weight="1"
            />
        <Button 
            android:id="@+id/a001_btn_login"
            style="@style/button_base"
            android:text="@string/login"
            android:layout_weight="1"
            />
    </LinearLayout>
</RelativeLayout>