<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_blue"
    android:gravity="center"
    android:orientation="vertical">
    
    <TextView 
        android:id="@+id/a002_tv_top"
        style="@style/textview_larger"
        android:gravity="center"
        android:text="@string/newuser"
        android:layout_marginTop="5dp"
        />
    
    <LinearLayout 
            style="@style/width_fill"
            android:orientation="vertical"
            >
            <TextView 
                style="@style/textview_normal"
                android:text="@string/email"
                />
            <EditText 
                android:id="@+id/a002_et_email"
                style="@style/edittext_base"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />
            <TextView 
                style="@style/textview_normal"
                android:text="@string/password"
                />
            <EditText 
                android:id="@+id/a002_et_password"
                style="@style/edittext_base"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/a002_layout_bottom"
        style="@style/width_fill"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button 
            android:id="@+id/a002_btn_login"
            style="@style/button_base"
            android:text="@string/login"
            android:layout_weight="1"
            />
        <Button 
            android:id="@+id/a002_btn_loginBuchMeO"
            style="@style/button_base"
            android:text="@string/loginBuchMeO"
            android:layout_weight="1"
            android:visibility="gone"
            />
        <ImageView 
            android:id="@+id/a002_iv_loginFB"
            style="@style/wrap"
            android:src="@drawable/facebook"
            android:layout_weight="1"
            />
        <ImageView 
            android:id="@+id/a002_iv_loginEmail"
            style="@style/wrap"
            android:src="@drawable/google"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>